Fix line-height for wrapping image captions

--- a/themes/xampa/static/css/blog.css
+++ b/themes/xampa/static/css/blog.css
@@ -533,8 +533,11 @@ footer a:hover {
 
 .figcaption {
     text-align: center;
-    font-size: 15px;
-    font-family: sans-serif;
+    font-size: 18px;
+}
+
+.figcaption p {
+    line-height: 1.2;
 }
 
 sup {
